Revision history for Path-Dispatcher

{{$NEXT}}
        - add abstracts to modules that were missing them (RT#132909)

1.07      2020-02-29 20:55:07Z
        - Switch from Any::Moose to Moo and Types::Standard
        based on PRs from chresomanci and hashbangperl

1.06    2015-02-18
        Switch packaging system to Dist::Zilla (David Pottage)
            https://github.com/sartak/path-dispatcher/pull/1
            Thanks to the CPAN Pull Request Challenge :)

1.05    2013-03-14
        eval q{$'} before regex match when needed to soothe bleadperl
            Thanks Dave Mitchell! http://www.nntp.perl.org/group/perl.perl5.porters/2013/03/msg200156.html

1.04    2011-09-01
        Explicitly depend on Test::Fatal (reported by Jérôme Quelin  [rt.cpan.org #70666])

        Convert all tests from Test::Exception to Test::Fatal

1.03    2011-08-30
        Provisional support for arbitrary payloads, not just code blocks, as results
            See https://github.com/sartak/path-dispatcher/blob/master/t/200-payload.t
        Eventually blocks will be deprecated, but not for a while. Internally blocks are
        rewritten as payloads so if you're doing deep magic with PD you may be exposed to
        that implementation detail.

1.02    2010-11-02
        Various improvements to the handling of $match->leftover with undef

1.01    2010-10-24
        Skip t/026-named-captures.t if you don't have 5.10.1

        Give matches a ->parent for inspecting an Under prefix rule's captures etc

1.00    2010-10-17
        Bump to 1.0 to indicate back compat breakage

        Add match->named($key) for pulling out a named capture

        Use Try::Tiny to avoid swallowing exceptions (rafl)

0.16      2010-10-17
        ** BACKWARDS INCOMPATIBLE CHANGE: Pass the match object into rule
        **    blocks rather than assigning $1, $2, $3. Use ->pos(1), (2), (3),
        **    etc. instead. This cleans up the code a lot and makes
        **    Path-Dispatcher more flexible.
