@@ -4,6 +4,7 @@ package Path::Dispatcher::Rule::Metadata;
 our $VERSION = '1.08';
 
 use Moo;
+use MooX::TypeTiny;
 use Type::Utils qw(class_type);
 use Types::Standard qw(Str);
 extends 'Path::Dispatcher::Rule';
