@@ -4,6 +4,7 @@ package Path::Dispatcher::Rule::Regex;
 our $VERSION = '1.08';
 
 use Moo;
+use MooX::TypeTiny;
 use Types::Standard qw(RegexpRef);
 
 extends 'Path::Dispatcher::Rule';
