@@ -2,6 +2,7 @@ Revision history for Path-Dispatcher
 
 {{$NEXT}}
         - add abstracts to modules that were missing them (RT#132909)
+        - add MooX::TypeTiny for optimized type checks
 
 1.07      2020-02-29 20:55:07Z
         - Switch from Any::Moose to Moo and Types::Standard
